[gd_scene load_steps=8 format=3 uid="uid://crpg1edr5d1db"]

[ext_resource type="Script" path="res://src/scenes/public/grossoEgg.gd" id="1_vv5su"]
[ext_resource type="Texture2D" uid="uid://b2r6mrt4en4fr" path="res://assets/sprites/audience/grosso/OvoGrossoComemorando.webp" id="8_i424j"]
[ext_resource type="Texture2D" uid="uid://b5re1ojrb4c3g" path="res://assets/sprites/audience/grosso/OvoGrossoFeliz.webp" id="9_2ax2o"]
[ext_resource type="Texture2D" uid="uid://cai2wdstrt5gm" path="res://assets/sprites/audience/grosso/OvoGrossoOlhandoPraBaixo.webp" id="10_tinwf"]
[ext_resource type="Texture2D" uid="uid://b51jw46d3rlsf" path="res://assets/sprites/audience/grosso/OvoGrossoOlhandoPraDireita.webp" id="11_7j1bh"]
[ext_resource type="Texture2D" uid="uid://cw1iv51irkbyj" path="res://assets/sprites/audience/grosso/OvoGrossoOlhandoPraEsquerda.webp" id="12_yeqbv"]
[ext_resource type="Texture2D" uid="uid://c3urvwxdv6x5x" path="res://assets/sprites/audience/grosso/OvoGrossoSurpreso.webp" id="13_5jyhm"]

[node name="GrossoEgg" type="Node2D"]
scale = Vector2(0.5, 0.5)
script = ExtResource("1_vv5su")

[node name="OvoGrossoComemorando" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("8_i424j")

[node name="OvoGrossoFeliz" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_2ax2o")

[node name="OvoGrossoOlhandoPraDireita" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("11_7j1bh")

[node name="OvoGrossoOlhandoPraEsquerda" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("12_yeqbv")

[node name="OvoGrossoSurpreso" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("13_5jyhm")

[node name="OvoGrossoOlhandoPraBaixo" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("10_tinwf")
